--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <ClCompile Include="Graphics\Start Up\Init.cpp" />
     <ClCompile Include="Graphics\Utility\Colour.cpp" />
+    <ClCompile Include="Graphics\Utility\Font.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Misc\Pch\pch.cpp" />
     <ClCompile Include="Misc\Vector.cpp" />
@@ -176,6 +177,7 @@
   <ItemGroup>
     <ClInclude Include="Graphics\Start Up\Init.h" />
     <ClInclude Include="Graphics\Utility\Colour.h" />
+    <ClInclude Include="Graphics\Utility\Font.h" />
     <ClInclude Include="Misc\Pch\pch.h" />
     <ClInclude Include="Misc\Vector.h" />
   </ItemGroup>
