--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="Graphics\Start Up\Init.h" />
     <ClInclude Include="Graphics\Utility\Colour.h" />
     <ClInclude Include="Graphics\Utility\Font.h" />
+    <ClInclude Include="Graphics\Graphics.h" />
     <ClInclude Include="Misc\Pch\pch.h" />
     <ClInclude Include="Misc\Vector.h" />
   </ItemGroup>
