--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Graphics\Entities\Form.cpp" />
     <ClCompile Include="Graphics\Entities\Tab.cpp" />
     <ClCompile Include="Graphics\Entities\TabController.cpp" />
+    <ClCompile Include="Graphics\Entities\Toggle.cpp" />
     <ClCompile Include="Graphics\Start Up\GUI.cpp" />
     <ClCompile Include="Graphics\Start Up\Init.cpp" />
     <ClCompile Include="Graphics\Utility\Colour.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Entities\Tab.h" />
     <ClInclude Include="Graphics\Entities\TabController.h" />
+    <ClInclude Include="Graphics\Entities\Toggle.h" />
     <ClInclude Include="Graphics\Start Up\GUI.h" />
     <ClInclude Include="Graphics\Start Up\Init.h" />
     <ClInclude Include="Graphics\Utility\Colour.h" />
