--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Graphics\Entities\Label.cpp" />
     <ClCompile Include="Graphics\Entities\Tab.cpp" />
     <ClCompile Include="Graphics\Entities\TabController.cpp" />
+    <ClCompile Include="Graphics\Entities\TextBox.cpp" />
     <ClCompile Include="Graphics\Entities\Toggle.cpp" />
     <ClCompile Include="Graphics\Start Up\GUI.cpp" />
     <ClCompile Include="Graphics\Start Up\Init.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="Graphics\Entities\Label.h" />
     <ClInclude Include="Graphics\Entities\Tab.h" />
     <ClInclude Include="Graphics\Entities\TabController.h" />
+    <ClInclude Include="Graphics\Entities\TextBox.h" />
     <ClInclude Include="Graphics\Entities\Toggle.h" />
     <ClInclude Include="Graphics\Start Up\GUI.h" />
     <ClInclude Include="Graphics\Start Up\Init.h" />
