Implemented Colour Picker

--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <ClCompile Include="Graphics\Drawing.cpp" />
     <ClCompile Include="Graphics\Entities\Button.cpp" />
+    <ClCompile Include="Graphics\Entities\ColourPicker.cpp" />
     <ClCompile Include="Graphics\Entities\Entity.cpp" />
     <ClCompile Include="Graphics\Entities\Form.cpp" />
     <ClCompile Include="Graphics\Start Up\GUI.cpp" />
@@ -184,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="Graphics\Drawing.h" />
     <ClInclude Include="Graphics\Entities\Button.h" />
+    <ClInclude Include="Graphics\Entities\ColourPicker.h" />
     <ClInclude Include="Graphics\Entities\Entity.h" />
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Start Up\GUI.h" />
