--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="Graphics\Entities\Entity.h" />
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Entities\Label.h" />
+    <ClInclude Include="Graphics\Entities\Slider.h" />
     <ClInclude Include="Graphics\Entities\Tab.h" />
     <ClInclude Include="Graphics\Entities\TabController.h" />
     <ClInclude Include="Graphics\Entities\Toggle.h" />
