--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="Graphics\Drawing.cpp" />
     <ClCompile Include="Graphics\Entities\Button.cpp" />
     <ClCompile Include="Graphics\Entities\ColourPicker.cpp" />
+    <ClCompile Include="Graphics\Entities\ComboBox.cpp" />
     <ClCompile Include="Graphics\Entities\DropDown.cpp" />
     <ClCompile Include="Graphics\Entities\Entity.cpp" />
     <ClCompile Include="Graphics\Entities\Form.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="Graphics\Drawing.h" />
     <ClInclude Include="Graphics\Entities\Button.h" />
     <ClInclude Include="Graphics\Entities\ColourPicker.h" />
+    <ClInclude Include="Graphics\Entities\ComboBox.h" />
     <ClInclude Include="Graphics\Entities\DropDown.h" />
     <ClInclude Include="Graphics\Entities\Entity.h" />
     <ClInclude Include="Graphics\Entities\Form.h" />
