--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="Graphics\Entities\Form.cpp" />
     <ClCompile Include="Graphics\Entities\KeyBind.cpp" />
     <ClCompile Include="Graphics\Entities\Label.cpp" />
+    <ClCompile Include="Graphics\Entities\TextBox.cpp" />
     <ClCompile Include="Graphics\Entities\Tab.cpp" />
     <ClCompile Include="Graphics\Entities\TabController.cpp" />
     <ClCompile Include="Graphics\Entities\TabListBox.cpp" />
@@ -206,6 +207,7 @@
     <ClInclude Include="Graphics\Entities\TabController.h" />
     <ClInclude Include="Graphics\Entities\TabListBox.h" />
     <ClInclude Include="Graphics\Entities\TabListBoxController.h" />
+    <ClInclude Include="Graphics\Entities\TextBox.h" />
     <ClInclude Include="Graphics\Entities\Toggle.h" />
     <ClInclude Include="Graphics\Start Up\GUI.h" />
     <ClInclude Include="Graphics\Start Up\Init.h" />
