--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Entities\KeyBind.h" />
     <ClInclude Include="Graphics\Entities\Label.h" />
+    <ClInclude Include="Graphics\Entities\NumericSlider.h" />
     <ClInclude Include="Graphics\Entities\Slider.h" />
     <ClInclude Include="Graphics\Entities\Tab.h" />
     <ClInclude Include="Graphics\Entities\TabController.h" />
