--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="Graphics\Entities\Form.cpp" />
     <ClCompile Include="Graphics\Entities\KeyBind.cpp" />
     <ClCompile Include="Graphics\Entities\Label.cpp" />
+    <ClCompile Include="Graphics\Entities\LoadingBar.cpp" />
     <ClCompile Include="Graphics\Entities\TextBox.cpp" />
     <ClCompile Include="Graphics\Entities\Tab.cpp" />
     <ClCompile Include="Graphics\Entities\TabController.cpp" />
@@ -208,6 +209,7 @@
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Entities\KeyBind.h" />
     <ClInclude Include="Graphics\Entities\Label.h" />
+    <ClInclude Include="Graphics\Entities\LoadingBar.h" />
     <ClInclude Include="Graphics\Entities\NumericSlider.h" />
     <ClInclude Include="Graphics\Entities\Slider.h" />
     <ClInclude Include="Graphics\Entities\Tab.h" />
