--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Graphics\Entities\ColourPicker.cpp" />
     <ClCompile Include="Graphics\Entities\ComboBox.cpp" />
     <ClCompile Include="Graphics\Entities\DropDown.cpp" />
+    <ClCompile Include="Graphics\Entities\DropDownTextBox.cpp" />
     <ClCompile Include="Graphics\Entities\Entity.cpp" />
     <ClCompile Include="Graphics\Entities\Form.cpp" />
     <ClCompile Include="Graphics\Entities\KeyBind.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="Graphics\Entities\ColourPicker.h" />
     <ClInclude Include="Graphics\Entities\ComboBox.h" />
     <ClInclude Include="Graphics\Entities\DropDown.h" />
+    <ClInclude Include="Graphics\Entities\DropDownTextBox.h" />
     <ClInclude Include="Graphics\Entities\Entity.h" />
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Entities\KeyBind.h" />
