--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="Graphics\Entities\KeyBind.cpp" />
     <ClCompile Include="Graphics\Entities\Label.cpp" />
     <ClCompile Include="Graphics\Entities\LoadingBar.cpp" />
+    <ClCompile Include="Graphics\Entities\Radar.cpp" />
     <ClCompile Include="Graphics\Entities\TextBox.cpp" />
     <ClCompile Include="Graphics\Entities\Tab.cpp" />
     <ClCompile Include="Graphics\Entities\TabController.cpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="Graphics\Entities\Label.h" />
     <ClInclude Include="Graphics\Entities\LoadingBar.h" />
     <ClInclude Include="Graphics\Entities\NumericSlider.h" />
+    <ClInclude Include="Graphics\Entities\Radar.h" />
     <ClInclude Include="Graphics\Entities\Slider.h" />
     <ClInclude Include="Graphics\Entities\Tab.h" />
     <ClInclude Include="Graphics\Entities\TabController.h" />
