--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -227,6 +227,7 @@
     <ClInclude Include="Graphics\Utility\Animation.h" />
     <ClInclude Include="Graphics\Utility\AssetManager.h" />
     <ClInclude Include="Graphics\Utility\Assets\FormIcon.h" />
+    <ClInclude Include="Graphics\Utility\Assets\Map.h" />
     <ClInclude Include="Graphics\Utility\Colour.h" />
     <ClInclude Include="Graphics\Utility\Font.h" />
     <ClInclude Include="Graphics\Graphics.h" />
