--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="Graphics\Utility\AssetManager.cpp" />
     <ClCompile Include="Graphics\Utility\Colour.cpp" />
     <ClCompile Include="Graphics\Utility\Font.cpp" />
+    <ClCompile Include="Graphics\Utility\Localisation.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Misc\Input.cpp" />
     <ClCompile Include="Misc\Pch\pch.cpp">
@@ -231,6 +232,7 @@
     <ClInclude Include="Graphics\Utility\Colour.h" />
     <ClInclude Include="Graphics\Utility\Font.h" />
     <ClInclude Include="Graphics\Graphics.h" />
+    <ClInclude Include="Graphics\Utility\Localisation.h" />
     <ClInclude Include="Misc\Input.h" />
     <ClInclude Include="Misc\Pch\pch.h" />
     <ClInclude Include="Misc\Vector.h" />
