--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Graphics\Entities\Form.cpp" />
     <ClCompile Include="Graphics\Entities\KeyBind.cpp" />
     <ClCompile Include="Graphics\Entities\Label.cpp" />
+    <ClCompile Include="Graphics\Entities\LanguageSelector.cpp" />
     <ClCompile Include="Graphics\Entities\LoadingBar.cpp" />
     <ClCompile Include="Graphics\Entities\Radar.cpp" />
     <ClCompile Include="Graphics\Entities\TextBox.cpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="Graphics\Entities\Form.h" />
     <ClInclude Include="Graphics\Entities\KeyBind.h" />
     <ClInclude Include="Graphics\Entities\Label.h" />
+    <ClInclude Include="Graphics\Entities\LanguageSelector.h" />
     <ClInclude Include="Graphics\Entities\LoadingBar.h" />
     <ClInclude Include="Graphics\Entities\NumericSlider.h" />
     <ClInclude Include="Graphics\Entities\Radar.h" />
@@ -227,8 +229,10 @@
     <ClInclude Include="Graphics\Start Up\Init.h" />
     <ClInclude Include="Graphics\Utility\Animation.h" />
     <ClInclude Include="Graphics\Utility\AssetManager.h" />
+    <ClInclude Include="Graphics\Utility\Assets\CNFlag.h" />
     <ClInclude Include="Graphics\Utility\Assets\FormIcon.h" />
     <ClInclude Include="Graphics\Utility\Assets\Map.h" />
+    <ClInclude Include="Graphics\Utility\Assets\UKFlag.h" />
     <ClInclude Include="Graphics\Utility\Colour.h" />
     <ClInclude Include="Graphics\Utility\Font.h" />
     <ClInclude Include="Graphics\Graphics.h" />
